# arduino-yun-bridge2

./: .aiexclude  .clangd  .copilot-instructions  .coveragerc  .editorconfig  .flake8  .gitignore  .isort.cfg  .luacheckrc  .pre-commit-config.yaml  0_image.sh  1. compile.sh  1_compile.sh  2. expand.sh  2_expand.sh  3. install.sh  3_install.sh  AGENTS.md  BridgeControl.ino  CHANGES_REPORT.md  GEMINI.md  LED13BridgeControl.ino  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md  build_output.txt  compile.sh  coverage_report.py  datastore_test.py  debug_analysis.py  debug_crc_mismatch.py  fix.py  fix_pool.py  fix_raw.py  fix_serial_flow.py  hardcoded_commands_report.md  install.sh  lua_output.txt  mailbox_test.py  (+36 more)
.agent/: mcp_config.json
.agent/agents/: openwrt-architect-arduino.agent.md
.agent/rules/: openwrt-architect-arduino.agent.md
.agent/skills/: gemini-invoke.md  gemini-plan-execute.md  gemini-review.md  gemini-scheduled-triage.md  gemini-triage.md
.agent/workflows/: gemini-invoke.md  gemini-plan-execute.md  gemini-review.md  gemini-scheduled-triage.md  gemini-triage.md
.github/: copilot-instructions  copilot-instructions.md
.github/agents/: openwrt-architect-arduino.agent.md
.github/commands/: gemini-invoke.toml  gemini-plan-execute.toml  gemini-review.toml
.github/workflows/: build-apk.yml  ci.yml  ci_python_build.yml  emulation.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-plan-execute.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  publish-packages.yml
Bridge-v2/: LED13BridgeControl.ino  README.md  install.sh
Bridge-v2/examples/: ConsoleTest.ino  FileIOTest.ino  KVStoreTest.ino  LED13Test.ino  MailboxTest.ino  ProcessTest.ino
Bridge-v2/src/: Bridge.cpp  Bridge.h
YunBridge-v2/: README.md  ROADMAP.md  install.sh
YunBridge-v2/examples/: all_mqtt_features_test.py  console_mqtt_test.py  console_test.py  fileio_mqtt_test.py  fileio_test.py  kv_store_mqtt_test.py  kv_store_test.py  led13_mqtt_test.py  led13_test.py  mailbox_mqtt_test.py  mailbox_test.py  process_mqtt_test.py  process_test.py
YunBridge-v2/src/: bridge_daemon.py
YunWebUI-v2/: README.md  ROADMAP.md  install.sh
YunWebUI-v2/www/: index.html
dependencies/: runtime.toml
docs/: ARCHITECTURE.md  BRIDGE_V3_DRAFT.md  CREDENTIALS.md  PROTOCOL.md  README.md  ROADMAP.md
feeds/: README.md
feeds/python3-aiomqtt/: Makefile
feeds/python3-aiosqlite/: Makefile
feeds/python3-click/: Makefile
feeds/python3-cobs/: Makefile
feeds/python3-construct/: Makefile
feeds/python3-cryptography/: Makefile
feeds/python3-diskcache/: Makefile
feeds/python3-heapdict/: Makefile
feeds/python3-markdown-it-py/: Makefile
feeds/python3-marshmallow/: Makefile
feeds/python3-mdurl/: Makefile
feeds/python3-mqtt5/: Makefile
feeds/python3-msgspec/: Makefile
feeds/python3-paho-mqtt/: Makefile
feeds/python3-persist-queue/: Makefile
feeds/python3-prometheus-client/: Makefile
feeds/python3-protobuf/: Makefile
hardware/: targets.example.toml
luci-app-mcubridge/: Makefile
luci-app-yunbridge/: Makefile
mcubridge/: .coveragerc  Makefile  mcubridge.init
mcubridge-client-examples/: README.md  all_features_test.py  bootloader_test.py  console_test.py  datastore_test.py  fileio_test.py  led13_test.py  mailbox_read_test.py  mailbox_test.py  process_test.py  sensor_reader_test.py  spi_test.py
mcubridge-gateway/: Makefile  README.md  build_rpm.sh  gateway.py  requirements.txt
mcubridge-library-arduino/: README.md  library.properties  run_tests.sh
openwrt-library-arduino/: README.md  install.sh  library.properties
openwrt-mcu-bridge/: Makefile  mcubridge.init  mcubridge.sh
openwrt-mcu-core/: Makefile  mcubridge.files
openwrt-mcu-examples-python/: README.md  all_features_test.py  console_test.py  datastore_test.py  fileio_test.py  led13_test.py  mailbox_read_test.py  mailbox_test.py  process_test.py  sensor_reader_test.py  test.py  uci.py
openwrt-yun-bridge/: Makefile  Makefile.openwrt  bridge_daemon.py  setup.py  yunbridge.init  yunbridge.sh
openwrt-yun-client-python/: Makefile  README.md  all_features_test.py  all_mqtt_features_test.py  client.py  console_mqtt_test.py  fileio_mqtt_test.py  kv_store_mqtt_test.py  led13_mqtt_test.py  mailbox_mqtt_test.py  process_mqtt_test.py  setup.py
openwrt-yun-client-sketches/: ConsoleTest.ino  FileIOTest.ino  KVStoreTest.ino  LED13Test.ino  ProcessTest.ino
openwrt-yun-core/: 99-yunbridge-ttyath0.conf  Makefile  credentials.env  yunbridge.files  yunbridge.init
openwrt-yun-examples-python/: README.md  all_features_test.py  console_test.py  datastore_test.py  fileio_test.py  led13_test.py  mailbox_read_test.py  mailbox_test.py  process_test.py  sensor_reader_test.py  test.py
openwrt-yun-v2/: README.md  install.sh
plugins/: README.md  auto_toggle_pin13.py
pytest_homeassistant_custom_component/: __init__.py  plugins.py
python3-aiomqtt/: Makefile
python3-annotated-types/: Makefile
python3-asyncio-mqtt/: Makefile
python3-cobs/: Makefile
python3-paho-mqtt/: Makefile
python3-prometheus-client/: Makefile
python3-pydantic/: Makefile
python3-pydantic-core/: Makefile
python3-pyserial-asyncio/: Makefile
python3-tenacity/: Makefile
python3-typing-inspection/: Makefile
requirements/: runtime.toml  runtime.txt
sample-build/: build.options.json
tests/: check_cpp_syntax.py
tools/: __init__.py  arduino_memory_report.py  arduino_symbol_profiler.py  check_gemini_parity.py  check_symmetry.py  ci_arduino.sh  ci_arduino_host_tests.sh  ci_fuzz.sh  codebase_auditor.py  compile_emulator.sh  coverage_arduino.sh  coverage_find_gaps.py  coverage_python.sh  coverage_report.py  cppcheck_suppressions.txt  daemon_profile_report.py  emulation_runner.py  ensure_clang_format.sh  frame_debug.py  gemini_model  generate_compile_commands.py  hardware_harness.py  hardware_smoke_test.sh  openwrt_smoke_test.py  protocol_fuzzer.py  python_runtime_profiler.py  qemu-mcubridge.xml  rotate_credentials.sh  sync_feed_overlay.sh  sync_runtime_deps.py  test_compile_variants.sh
uboot-patches/: README.md  apply_patches.sh
(+2753 files in other folders)
