[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcubridge"
version = "2.8.5"
description = "Arduino MCU Bridge Protocol for OpenWrt (Python 3.13)"
requires-python = ">=3.13"
dependencies = [
    "aiomqtt==2.5.1",
    "click==8.3.3",
    "cobs==1.2.2",
    "construct==2.10.70",
    "cryptography==47.0.0",
    "diskcache==5.6.3",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "msgspec==0.21.1",
    "paho-mqtt==2.1.0",
    "prometheus-client==0.25.0",
    "psutil==7.2.2",
    "pygments==2.20.0",
    "pyserial-asyncio-fast==0.16",
    "rich==15.0.0",
    "sh==2.2.2",
    "shellingham==1.5.4",
    "structlog==25.5.0",
    "svcs==25.1.0",
    "tenacity==9.1.4",
    "typer[all]==0.25.0",
    "uvloop==0.22.1",
]

[tool.setuptools]
packages = ["mcubridge"]
package-dir = {"" = "mcubridge"}

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --timeout=10 --timeout_method=thread"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
testpaths = ["mcubridge/tests", "mcubridge-client-examples/client_tests"]
pythonpath = [".", "mcubridge"]
norecursedirs = ["openwrt-sdk", "feeds", ".git", ".tox", ".venv*"]
markers = [
    "fuzz: mark a test as a fuzz test",
    "timeout: timeout marker accepted during IDE discovery even when pytest-timeout is absent",
]
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
stubPath = "typings"
extraPaths = ["mcubridge", "typings/stubs"]
include = [
    "mcubridge/mcubridge",
    "mcubridge/tests",
    "mcubridge-client-examples/mcubridge_client",
    "mcubridge/scripts",
    "tools"
]
strict = [
    "mcubridge/mcubridge",
    "mcubridge/tests",
    "mcubridge-client-examples/mcubridge_client",
    "mcubridge/scripts",
    "tools"
]
exclude = [
    "openwrt-sdk",
    ".tox",
    ".venv",
    ".venv_debug",
    "**/__pycache__",
    "**/node_modules",
    "**/*_pb2.py",
    "**/.*"
]
reportMissingImports = true
reportMissingTypeStubs = true

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["*_pb2.py", "*_pb2.pyi", "typings"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "A", "PLW"]
extend-select = ["E226"]
preview = true
explicit-preview-rules = true

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.mccabe]
# [QUALITY] Reduced from 50 to 25 for SIL-2 compliance and maintainability
max-complexity = 25
