[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcubridge"
version = "2.8.5"
description = "Arduino MCU Bridge Protocol for OpenWrt (Python 3.13)"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.22.1",
    "cobs==1.2.2",
    "cryptography==49.0.0",
    "grpclib==0.4.9",
    "h2==4.4.0",
    "prometheus-client==0.25.0",
    "protobuf==7.36.0rc1",
    "serialx==1.8.2",
    "structlog==26.1.0",
    "tenacity==9.1.4",
    "uvloop==0.22.1",
]

[tool.setuptools]
packages = ["mcubridge"]
package-dir = {"" = "mcubridge"}

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --timeout=10 --timeout_method=thread"
log_cli = true
log_cli_level = "INFO"
testpaths = ["mcubridge/tests", "mcubridge-client-examples/client_tests"]
pythonpath = [".", "mcubridge", "mcubridge-client-examples"]
norecursedirs = ["openwrt-sdk", "feeds", ".git", ".tox", ".venv*", ".dummy_libs", ".tmp_tests", ".*"]
markers = [
    "fuzz: mark a test as a fuzz test",
    "timeout: timeout marker accepted during IDE discovery even when pytest-timeout is absent",
]
filterwarnings = [
    "error",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
stubPath = "typings"
extraPaths = ["mcubridge", "typings/stubs", "mcubridge-client-examples"]
include = [
    "mcubridge/mcubridge",
    "mcubridge/tests",
    "mcubridge-client-examples/mcubridge_client",
    "mcubridge/scripts",
    "tools"
]
strict = [
    "mcubridge/mcubridge",
    "mcubridge/tests",
    "mcubridge-client-examples/mcubridge_client",
    "mcubridge/scripts",
    "tools"
]
exclude = [
    "openwrt-sdk",
    "tools/protocol/templates",
    ".tox",
    ".venv",
    ".venv_debug",
    "**/__pycache__",
    "**/node_modules",
    "**/*_pb2.py",
    "**/*_pb2.pyi",
    "**/*_grpc.py",
    "*__pyrefly_virtual__",
    "**/.*"
]
reportMissingImports = true
reportMissingTypeStubs = true
reportMissingModuleSource = false

[tool.black]
target-version = ['py313']
line-length = 120
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | \.venv_debug
  | \.tmp_tests
  | typings
  | openwrt-sdk.*
  | tools/protocol/templates
)/
'''

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["*_pb2.py", "*_pb2.pyi", "*_grpc.py", "typings", "tools/protocol/templates", ".tmp_tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "A", "PLW"]
extend-select = ["E226"]
preview = true
explicit-preview-rules = true

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.mccabe]
# [QUALITY] Reduced from 50 to 25 for SIL-2 compliance and maintainability
max-complexity = 25

[tool.coverage.run]
branch = true
source = [
    "mcubridge/mcubridge",
    "mcubridge-client-examples/mcubridge_client"
]
omit = [
    "mcubridge/tests/*",
    "mcubridge-client-examples/client_tests/*",
    "**/*_pb2.py",
    "**/*_pb2.pyi",
    "**/*_grpc.py"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]
